# SwiftCore

./: Cargo.toml  README.md  arch.md  panic.md
.cargo/: config.toml  config_link.toml
books/: README.md
scripts/: qemu-runner.sh
src/: error.rs  handler.rs  kernel.rs  lib.rs  main.rs  panic.rs
src/boot/: loader.rs
src/core/: kernel.rs
src/core/util/: vga.rs
src/interrupt/: timer.rs
src/mem/: frame_allocator.rs  gdt.rs  idt.rs  mod.rs  paging.rs  tss.rs
src/task/: mod.rs
src/util/: serial.rs  vga.rs
