[package]
name = "SwiftCore"
version = "0.1.0"
edition = "2021"
authors = ["nekogakure <info@mail.nekogakure.jp>"]

[lib]
name = "swiftcore"
path = "src/kernel.rs"

[[bin]]
name = "boot"
path = "src/boot/loader.rs"

[dependencies]
uefi = { version = "0.30", features = ["alloc", "logger"] }
log = "0.4"
spin = "0.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
